--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 
     <!-- See https://goo.gl/OOhYW5 -->
     <link rel="manifest" href="/manifest.json">
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="./src/style/normalize.css">
     <script src="/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 
     <script type="module" src="/src/film-app/film-app.js" crossorigin></script>
+    <style>
+      body{
+          font-family: 'Roboto', sans-serif;
+        }
+    </style>
   </head>
   <body>
     <film-app></film-app>
